--- a/src/sass/_partial.scss
+++ b/src/sass/_partial.scss
@@ -1,2 +1,10 @@
 $black: rgba(29, 28, 30, 1);
 $white: rgba(255, 255, 255, 1);
+$pink: rgba(231, 129, 107, 1);
+
+$fontJ: "Jost", sans-serif;
+
+@mixin info {
+  width: 350px;
+  height: 78px;
+}
