--- a/src/sass/_index.scss
+++ b/src/sass/_index.scss
@@ -1,50 +1,48 @@
-//   header {
-//   }
-header{
-    display: flex;
-    justify-content: space-between;
-    margin-top: 65px;
-    margin-left: 165px;
-    margin-right: 122px;
-    margin-bottom: 65px;
-    img{
-        max-width:152.32px;
-        max-height:20.54px;
-        align-self: center;
-    }
-    nav{
-        li{
-            display: inline-block;
-            
-            a{
-                padding-right: 42px;
-                text-decoration: none;
-                color:$black;
-                font-family: 'Jost';
-                font-style: normal;
-                font-weight: 400;
-                font-size: 14px;
-                line-height: 14px;
-                letter-spacing: 2px;
-                
-            }
-        }
-    }
-}
 * {
   margin: 0;
   padding: 0;
 }
 body {
   max-width: 1440px;
+  max-height: 2940px;
   margin: auto;
+  header {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 65px;
+    margin-left: 165px;
+    margin-right: 122px;
+    margin-bottom: 65px;
+    img {
+      max-width: 197px;
+      max-height: 27px;
+      align-self: center;
+    }
+    nav {
+      li {
+        display: inline-block;
 
+        a {
+          padding-right: 42px;
+          text-decoration: none;
+          color: $black;
+          font-family: "Jost";
+          font-style: normal;
+          font-weight: 400;
+          font-size: 14px;
+          line-height: 14px;
+          letter-spacing: 2px;
+        }
+      }
+    }
+  }
   //   main {
   //   }
 
   footer {
     position: relative;
     z-index: auto;
+    height: 393px;
     .section__contact {
       display: flex;
       align-items: center;
@@ -60,22 +58,22 @@ body {
       position: relative;
       z-index: 1;
 
-      div{
+      div {
         margin-left: 95px;
-        
-        h1{
+
+        h1 {
           max-width: 268px;
           max-height: 98px;
-          font-family: 'Jost';
+          font-family: "Jost";
           font-style: normal;
           font-weight: 500;
           font-size: 40px;
           line-height: 40px;
         }
-        p{
+        p {
           max-width: 459px;
           max-height: 78px;
-          font-family: 'Jost';
+          font-family: "Jost";
           font-style: normal;
           font-weight: 400;
           font-size: 16px;
@@ -83,12 +81,12 @@ body {
           margin-bottom: 46px;
         }
       }
-      a{
+      a {
         max-width: 152px;
         max-height: 56px;
         letter-spacing: 1px;
         text-transform: uppercase;
-        font-family: 'Jost';
+        font-family: "Jost";
         font-style: normal;
         font-weight: 500;
         font-size: 15px;
@@ -97,17 +95,17 @@ body {
         margin-right: 96px;
         text-decoration: none;
         color: $black;
-      }     
-      a:link, a:visited{
+      }
+      a:link,
+      a:visited {
         padding: 17px 19px 17px 18px;
         background-color: $white;
       }
       //   h1 {
       //   }
     }
-    .nav__background {
+    .lower__container {
       background-color: $black;
-      height: 393px;
       padding-top: 144px;
       .footer__nav {
         div {
@@ -147,42 +145,51 @@ body {
         margin: auto;
         opacity: 0.1;
       }
-      .section__info {
+      .inline__lower__container {
         display: flex;
-        margin-left: 165px;
-        margin-top: 31px;
-        color: $white;
-        opacity: 0.5;
-        font-family: $fontJ;
-        font-size: 16px;
-        line-height: 26px;
-        .info__address {
-          padding-right: 30px;
-          @include info;
-          margin-bottom: 72px;
-          h3 {
-            font-weight: 700;
-          }
-          p {
-            font-weight: 400;
-          }
-        }
-        .section__contact {
-          @include info;
-        }
-      }
-      .section__media {
-        display: flex;
-        justify-content: right;
-        ul {
-          list-style: none;
+        justify-content: space-between;
+        align-items: flex-end;
+        margin: 0;
+        .section__info {
           display: flex;
-          gap: 16px;
-          color: $pink;
-          width: 136px;
-          height: 24px;
+          margin-left: 165px;
+          margin-top: 31px;
+          color: $white;
+          opacity: 0.5;
+          font-family: $fontJ;
+          font-size: 16px;
+          line-height: 26px;
+          .info__address {
+            padding-right: 30px;
+            @include info;
+            margin-bottom: 72px;
+            h3 {
+              font-weight: 700;
+            }
+            p {
+              font-weight: 400;
+            }
+          }
+          .section__contact {
+            @include info;
+          }
+        }
+        .section__media {
+          margin-top: 85px;
           margin-right: 164px;
           margin-bottom: 72px;
+          ul {
+            list-style: none;
+            display: flex;
+            gap: 16px;
+            color: $pink;
+            li {
+              i {
+                height: 24px;
+                width: 24px;
+              }
+            }
+          }
         }
       }
     }
