--- a/src/css/style.css
+++ b/src/css/style.css
@@ -230,4 +230,45 @@ body footer .lower__container .inline__lower__container .section__media ul {
 }
 body footer .lower__container .inline__lower__container .section__media ul li i {
   font-size: 24px;
+}
+
+.section__solutions {
+  color: rgb(255, 255, 255);
+  width: 1111px;
+  height: 252px;
+  background-image: url("../img/Oval.png");
+  background-repeat: no-repeat;
+  margin-left: 165px;
+  margin-right: 164px;
+  margin-bottom: 160px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.section__solutions div {
+  margin-left: 190px;
+  margin-right: 191px;
+}
+.section__solutions div h2 {
+  height: 48px;
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 48px;
+  margin-bottom: 24px;
+  text-align: center;
+}
+.section__solutions div p {
+  height: 52px;
+  width: 730px;
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  text-align: center;
 }/*# sourceMappingURL=style.css.map */
