--- a/src/sass/_index.scss
+++ b/src/sass/_index.scss
@@ -3,16 +3,16 @@
   padding: 0;
 }
 body {
+  font-family: "Jost";
   max-width: 1440px;
   max-height: 2940px;
   margin: auto;
   header {
     display: flex;
     justify-content: space-between;
-    margin-top: 65px;
-    margin-left: 165px;
-    margin-right: 122px;
-    margin-bottom: 65px;
+    width: 1111px;
+    margin: 65px auto; 
+
     img {
       max-width: 197px;
       max-height: 27px;
@@ -26,7 +26,7 @@ body {
           padding-right: 42px;
           text-decoration: none;
           color: $black;
-          font-family: "Jost";
+          
           font-style: normal;
           font-weight: 400;
           font-size: 14px;
@@ -55,8 +55,8 @@ body {
       background-repeat: no-repeat;
       width: 1111px;
       height: 292px;
-      margin-left: 165px;
-      margin-right: 164px;
+      margin-left: auto;
+      margin-right: auto;
       margin-bottom: -101px;
       position: relative;
       z-index: 1;
