--- a/src/sass/_webdesign.scss
+++ b/src/sass/_webdesign.scss
@@ -5,8 +5,8 @@
     height:  252px;
     background-image: url("../img/Oval.png");
     background-repeat: no-repeat;
-    margin-left: 165px;
-    margin-right: 164px;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 160px;
     display: flex;
     align-items: center;
