--- a/src/css/style.css
+++ b/src/css/style.css
@@ -40,6 +40,74 @@ body header nav li a {
   line-height: 14px;
   letter-spacing: 2px;
 }
+body main .section__projects {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas: "a b" "a c";
+  gap: 24px 30px;
+  margin: 0 auto 160px;
+  width: 1082px;
+}
+body main .section__projects .projects__web {
+  grid-area: a;
+}
+body main .section__projects .projects__web .projects__web__img {
+  position: relative;
+}
+body main .section__projects .projects__web .projects__web__img .projects__web__text {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+body main .section__projects .projects__web .projects__web__img .projects__web__text h1 {
+  font-family: "Jost", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 48px;
+  letter-spacing: 2px;
+  color: rgb(255, 255, 255);
+}
+body main .section__projects .projects__app {
+  grid-area: b;
+}
+body main .section__projects .projects__app .projects__app__img {
+  position: relative;
+}
+body main .section__projects .projects__app .projects__app__img .projects__app__text {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+body main .section__projects .projects__app .projects__app__img .projects__app__text h1 {
+  font-family: "Jost", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 48px;
+  letter-spacing: 2px;
+  color: rgb(255, 255, 255);
+}
+body main .section__projects .projects__graphic {
+  grid-area: c;
+}
+body main .section__projects .projects__graphic .projects__graphic__img {
+  position: relative;
+}
+body main .section__projects .projects__graphic .projects__graphic__img .projects__graphic__text {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+body main .section__projects .projects__graphic .projects__graphic__img .projects__graphic__text h1 {
+  font-family: "Jost", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 48px;
+  letter-spacing: 2px;
+  color: rgb(255, 255, 255);
+}
 body main .section__values {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -56,9 +124,10 @@ body main .section__values {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin-bottom: 160px;
+  margin: 0 auto 160px;
   font-family: "Jost", sans-serif;
   color: rgb(51, 49, 54);
+  width: 1110px;
 }
 body main .section__values .values__passion, body main .section__values .values__friendly, body main .section__values .values__resourceful {
   font-size: small;
@@ -105,9 +174,7 @@ body footer .section__contact {
   background-repeat: no-repeat;
   width: 1111px;
   height: 292px;
-  margin-left: 165px;
-  margin-right: 164px;
-  margin-bottom: -101px;
+  margin: 0 auto -101px;
   position: relative;
   z-index: 1;
 }
